--- a/.env.development
+++ b/.env.development
@@ -5,19 +5,16 @@ VITE_DEV = true
 VITE_PORT = 3000
 
 # 接口地址
-VITE_BASE_URL = https://yyds-shop-b2c-dev.vjlau.com/frontendApi/v1/
-# VITE_BASE_URL = https://demo-b2c-shop.dazhoutech.cn/frontendApi/v1/
+VITE_BASE_URL = https://demo-b2c-shop.dazhoutech.cn/frontendApi/v1/
 
 # 上传域名sss
 VITE_UPLOAD_URL = /upload
 
 # h5访问地址
-# VITE_H5_DOMAIN = https://demo-b2c-shop.dazhoutech.cn/h5
-VITE_H5_DOMAIN = https://yyds-shop-b2c-dev.vjlau.com/h5
+VITE_H5_DOMAIN = https://demo-b2c-shop.dazhoutech.cn/h5
 
 # 静态资源路径(网络资源或者本地资源，小程序不支持本地资源)
-# VITE_ASSETS_PATH =  https://demo-b2c-shop.dazhoutech.cn/attachment/app/
-VITE_ASSETS_PATH = https://yyds-shop-b2c-dev.vjlau.com/attachment/app/
+VITE_ASSETS_PATH =  https://demo-b2c-shop.dazhoutech.cn/attachment/app/
 
 # 默认语言包
 VITE_LANGUAGE = chs
